@@ -17,6 +17,7 @@
  ! CustomMultiLayerMapSource: "null" error when loading
  ! directories.ini: mobac.atlasprofilesdir not used for loading profiles list
  + directories.ini: System variables can be used in the form ${VARNAME}
+ + Local map source format added: "MBTiles" (as <localTileSQLite>)
 
 1.9 beta 4 (2011-05-02)
  ~ Problem loading tile image type for custom map sources (ends up for TrekBuddy 
